--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         <ul>
     <li>
-        <a href="6Hviu54uouo2ZVI67oSu.pdf">Yoga template</a><br>
+        <a href="6Hviu54uouo2ZVI67oSu.pdf">Current Electricity worksheet</a><br>
     </li>
     <li>
         
