--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
     </li>
     <li>
         <a href="neetweek3.pdf">week-3 exam question paper</a><br>
-    </li>            
+    </li>  
+     <li>
+         <a href="neetweek7.pdf">week-3 exam question paper</a><br>
+     
+     </li>       
 </ul>
     </div>
         
