--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="neetweet3.pdf">neet weet 3</a>
             </li>
             <li>
-                <a href="clock.html">digital clock</a>
+                <a href="Clock.html">digital clock</a>
 
             </li>
         </ul>
