--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <a href="Clock.html">digital clock</a>
 
             </li>
+            <li>
+                <a href="physics/index.md"></a>
+            </li>
         </ul>
     </div>
 </body>
