--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             </li>
             <li>
-                <a href="physics/index.md"></a>
+                <a href="physics/index.md"> Physics practice questions for neet</a>
             </li>
         </ul>
     </div>
