--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             </li>
             <li>
-                <a href="physics/index.md"> Physics practice questions for neet</a>
+                <a href="electric_charges__quantizationa_nd_conservation.pdf"> Electric charges and fields practtice problems</a>
             </li>
         </ul>
     </div>
