--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <li>
                 <a href="electric_charges__quantizationa_nd_conservation.pdf"> Electric charges and fields practtice problems</a>
             </li>
+            <li>
+                <a href="ampere_s_laws_and_applications.pdf"> Ampere's law and applications</a>
+            </li>
         </ul>
     </div>
 </body>
