--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <li>
                 <a href="physics/electrostatics/coulomb's_law_and_electrostattic_force.pdf">coulomb's law and electrostatic force</a>
             </li>
+            <li>
+                <a href="1221.pdf">neet gt3</a>
+            </li>
         </ul>
     </div>
 </body>
