--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
                 <a href="1121.pdf">neet gt3</a>
             </li>
         </ul>
+        
+    </div>
+    <div>
+        <h>
+            Chapterwise practice problems
+        </h>
+        <ul>
+            <li>
+                <a href="physics/electrostatics/electrostatics_worksheet_complete_chapter_100_questions.pdf">Electric charges and fields</a>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
