--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <li>
                 <a href="physics/electrostatics/electrostatics_worksheet_complete_chapter_100_questions.pdf">Electric charges and fields</a>
             </li>
+            <li>
+                <a href="physics/current electricity/current_electricity_worksheet1.pdf">Current Electricity</a>
+            </li>
         </ul>
     </div>
 </body>
