--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <h2>Chapterwise Practice Problems</h2>
                 <ul>
                     <li><a href="physics/electrostatics/electrostatics_worksheet_complete_chapter_100_questions.pdf">Electric Charges and Fields</a></li>
-                    <li><a href="physics/current electricity/current_electricity_worksheet1.pdf">Current Electricity</a></li>
+                    <li><a href="physics/current electricity/current_electricity_worksheet1.pdf">Current Electricity sheet -1 </a></li>
                 </ul>
             </div>
 
