--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                     <li><a href="physics/electrostatics/electrostatics_worksheet_complete_chapter_100_questions.pdf">Electric Charges and Fields</a></li>
                     <li><a href="physics/current electricity/current_electricity_worksheet1.pdf">Current Electricity sheet - 1 </a></li>
                     <li><a href="physics/magnetism/magnetism1.pdf"> Magnetism Set - 1</a></li>
+                    <li><a href="physics/current electricity/current_electricity_worksheet_2.pdf"> Current Electricity seet -2</a></li>
                 </ul>
             </div>
 
