--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                     <li><a href="ampere_s_laws_and_applications.pdf">Ampere's Law and Applications</a></li>
                     <li><a href="physics/electrostatics/coulomb's_law_and_electrostattic_force.pdf">Coulomb's Law and Electrostatic Force</a></li>
                     <li><a href="students_roll_numbers.pdf">Students roll numbers</a></li>
+                    <li><a href="zoology46.jpeg">question numner 46</a></li>
                 </ul>
             </div>
 
