--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                     <li><a href="physics/electrostatics/coulomb's_law_and_electrostattic_force.pdf">Coulomb's Law and Electrostatic Force</a></li>
                     <li><a href="students_roll_numbers.pdf">Students roll numbers</a></li>
                     <li><a href="zoology46.jpeg">question numner 46</a></li>
+                    <li><a href="neet_week_10.pdf">question paper</a></li>
                 </ul>
             </div>
 
