--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="section">
                 <h2>Individual Topics</h2>
                 <ul>
-                    <li><a href="Clock.html">Digital Clock</a></li>
+                    <li><a href="clock.html">Digital Clock</a></li>
                     <li><a href="electric_charges__quantizationa_nd_conservation.pdf">Electric Charges and Fields Practice Problems</a></li>
                     <li><a href="ampere_s_laws_and_applications.pdf">Ampere's Law and Applications</a></li>
                     <li><a href="physics/electrostatics/coulomb's_law_and_electrostattic_force.pdf">Coulomb's Law and Electrostatic Force</a></li>
