--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                     <li><a href="physics/current electricity/current_electricity_worksheet1.pdf">Current Electricity sheet - 1 </a></li>
                     <li><a href="physics/magnetism/magnetism1.pdf"> Magnetism Set - 1</a></li>
                     <li><a href="physics/current electricity/current_electricity_worksheet_2.pdf"> Current Electricity seet -2</a></li>
+                    <li> <a href="physics/motion straight line">Motion in a straight line - 1 </a></li>
                 </ul>
             </div>
 
