--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                     <li><a href="physics/magnetism/magnetism1.pdf"> Magnetism Set - 1</a></li>
                     <li><a href="physics/current electricity/current_electricity_worksheet_2.pdf"> Current Electricity seet -2</a></li>
                     <li> <a href="physics/motion straight line/motion_in_one_dimension___1.pdf">Motion in a straight line - 1 </a></li>
+                    <li> <a href="physics/motion straight line/motion_in_one_dimension_sheet__2.pdf">Motion in a straight line -2 (graphs)</a></li>
                 </ul>
             </div>
 
