--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <div class="section">
                 <h2>Individual Topics</h2>
                 <ul>
+                    <li><a href="physics/current electricity/current_electricity_worksheet_for_eapcet_mathematics___1.pdf">Current electricity eapcet</a>
                     <li><a href="clock.html">Digital Clock</a></li>
                     <li><a href="electric_charges__quantizationa_nd_conservation.pdf">Electric Charges and Fields Practice Problems</a></li>
                     <li><a href="ampere_s_laws_and_applications.pdf">Ampere's Law and Applications</a></li>
