--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="section">
                 <h2>Chapterwise Practice Problems</h2>
                 <ul>
-                    <li><a href="physics/electrostatics/electrostatics_worksheet_complete_chapter_100_questions.pdf">Electric Charges and Fields</a></li>
+                    <li><a href="physics/electrostatics/electrostatics_worksheet_complete_chapter_100_questions.pdf">Electric Charges and Fields -1</a></li>
                     <li><a href="physics/current electricity/current_electricity_worksheet1.pdf">Current Electricity sheet - 1 </a></li>
                     <li><a href="physics/magnetism/magnetism1.pdf"> Magnetism Set - 1</a></li>
                     <li><a href="physics/current electricity/current_electricity_worksheet_2.pdf"> Current Electricity seet -2</a></li>
