--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                     <li><a href="zoology46.jpeg">question numner 46</a></li>
                     <li><a href="neet_week_10.pdf">question paper</a></li>
                     <li><a href="d9fc4fa3-7a91-433a-97c6-37b8e316f899.jpg">37</a></li>
+                    <li><a href="physics/tda/eapcet_mpc_key.jpeg">Mpc_eapcet key</a></li>
+                    <li><a href="physics/tda/neet_bipc_key.jpeg">Bipc key</a></li>
+                    <li><a href="physics/tda/neet_bipc_key.jpeg</li>
                 </ul>
             </div>
 
