--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <li><a href="d9fc4fa3-7a91-433a-97c6-37b8e316f899.jpg">37</a></li>
                     <li><a href="physics/tda/eapcet_mpc_key.jpeg">Mpc_eapcet key</a></li>
                     <li><a href="physics/tda/neet_bipc_key.jpeg">Bipc key</a></li>
-                    <li><a href="physics/tda/neet_bipc_key.jpeg</li>
+                    <li><a href=physics/tda/Eamcet_Sol_02_04_2025-.pdf">solutions</a></li>
                 </ul>
             </div>
 
