--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <li><a href ="physics/tda/Eamcet_Sol_02_04_2025-.pdf">Solutions mpc</a></li>
                 </ul>
             </div class="section">
-                <h2>Individual Topics</h2>
+                <h2>Toppers Destiny Academy</h2>
                 <ul>
                     <li><a href="physics/tda/eapcet_short_term_test_2.jpeg">EAPCET MPC TEST -2 KEY</a>
                     <li><a href="physics/tda/neet_short_term_test_2.jpeg">Eapcet/NEET test -2 key</a></li>
