--- a/index.html
+++ b/index.html
@@ -6,80 +6,141 @@
     <title>Physics Practice Resources</title>
     <style>
         * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-        body {
-            min-height: 100vh;
-            width: 100%;
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            color: #333;
-            line-height: 1.6;
-        }
+body {
+    min-height: 100vh;
+    width: 100%;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    background: linear-gradient(135deg, #f0f4f8 0%, #e0e7ef 100%);
+    color: #2d3748;
+    line-height: 1.7;
+    font-size: 16px;
+}
 
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 2rem;
-        }
+.container {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 3rem 1.5rem;
+}
 
-        h1 {
-            text-align: center;
-            margin-bottom: 2rem;
-            color: #2c3e50;
-            font-size: 2.5rem;
-        }
+h1 {
+    text-align: center;
+    margin-bottom: 3rem;
+    color: #1a202c;
+    font-size: 3rem;
+    font-weight: 700;
+    letter-spacing: -0.025em;
+    text-transform: capitalize;
+}
 
-        .section {
-            background-color: white;
-            border-radius: 8px;
-            padding: 2rem;
-            margin-bottom: 2rem;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
+h2 {
+    font-size: 1.75rem;
+    color: #2c5282;
+    margin-bottom: 1.5rem;
+    font-weight: 600;
+}
 
-        ul {
-            list-style: none;
-        }
+.section {
+    background: #ffffff;
+    border-radius: 12px;
+    padding: 2rem;
+    margin-bottom: 2rem;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
 
-        li {
-            margin: 1rem 0;
-        }
+.section:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+}
 
-        a {
-            text-decoration: none;
-            color: #2980b9;
-            font-size: 1.1rem;
-            transition: color 0.3s ease;
-        }
+ul {
+    list-style: none;
+}
 
-        a:hover {
-            color: #e74c3c;
-            text-decoration: underline;
-        }
+li {
+    margin: 0.75rem 0;
+    padding-left: 1.5rem;
+    position: relative;
+}
 
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-        }
+li::before {
+    content: '•';
+    color: #3182ce;
+    font-size: 1.5rem;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
 
-        @media (max-width: 768px) {
-            .container {
-                padding: 1rem;
-            }
+a {
+    text-decoration: none;
+    color: #3182ce;
+    font-size: 1.05rem;
+    font-weight: 500;
+    transition: color 0.2s ease, transform 0.2s ease;
+    display: inline-block;
+}
 
-            h1 {
-                font-size: 2rem;
-            }
+a:hover {
+    color: #e53e3e;
+    transform: translateX(4px);
+}
 
-            .section {
-                padding: 1.5rem;
-            }
-        }
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    gap: 2rem;
+}
+
+@media (max-width: 768px) {
+    .container {
+        padding: 1.5rem 1rem;
+    }
+
+    h1 {
+        font-size: 2.25rem;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    .section {
+        padding: 1.5rem;
+    }
+
+    .grid-container {
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
+    }
+}
+
+@media (max-width: 480px) {
+    h1 {
+        font-size: 1.875rem;
+    }
+
+    a {
+        font-size: 1rem;
+    }
+}
+
+/* Smooth scroll behavior */
+html {
+    scroll-behavior: smooth;
+}
+
+/* Focus styles for accessibility */
+a:focus {
+    outline: 2px solid #3182ce;
+    outline-offset: 2px;
+    border-radius: 4px;
+}
     </style>
 </head>
 <body>
