--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
             <div class="section">
                 <h2>Toppers Destiny Academy</h2>
                 <ul>
-                    <li><a href="physics/tda/eapcet_short_term_test_2.jpeg">EAPCET MPC TEST - 2 KEY</a></li>
-                    <li><a href="physics/tda/neet_short_term_test_2.jpeg">EAPCET/NEET test - 2 key</a></li>
+                    <li><a href="physics/tda/mpc_short_term_grand_test_2_key.png">EAPCET MPC TEST - 2 KEY</a></li>
+                    <li><a href="physics/tda/neet_short_term_grand_test_2_key.png">EAPCET/NEET test - 2 key</a></li>
                 </ul>
             </div>
         </div>
