--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
             <div class="section">
                 <h2>Toppers Destiny Academy</h2>
                 <ul>
-                    <li><a href="physics/tda/mpc_test_3.jpeg">MPC KEY</a></li>
-                    <li><a href="physics/tda/neet_short_term_test_3.jpeg">BiPC key</a></li>
+                    <li><a href="physics/tda/mpc_test_4.jpeg">MPC KEY</a></li>
+                    <li><a href="physics/tda/bipc_test_4.jpeg">BiPC key</a></li>
                 </ul>
             </div>
         </div>
